--- a/.travis.yml
+++ b/.travis.yml
@@ -23,14 +23,17 @@ before_install:
   # move client into subdirectory
   - mkdir -p schulcloud-client
   - mv !(schulcloud-client) schulcloud-client
+  # fetch switch_branch script
+  - curl https://gist.githubusercontent.com/schul-cloud-bot/26e57e99fdae76f30927089c9dd99df7/raw/a590139da5f969a6d330f38ab2d85d3769c86f3f/switch_branch.sh > switch_branch.sh
+  - chmod 700 switch_branch.sh
   # clone other required repositories and try to switch to branch with same name as current one
   - git clone https://github.com/schul-cloud/schulcloud-server.git schulcloud-server
-  - sh ./schulcloud-client/test/switch_branch.sh "schulcloud-server" "$BRANCH_NAME"
+  - sh switch_branch.sh "schulcloud-server" "$BRANCH_NAME"
   - git clone https://github.com/schul-cloud/docker-compose.git docker-compose
-  - sh ./schulcloud-client/test/switch_branch.sh "docker-compose" "$BRANCH_NAME"
+  - sh switch_branch.sh "docker-compose" "$BRANCH_NAME"
   # TODO remove branch (-b hotfix-travis) from next line
   - git clone -b hotfix-travis https://github.com/schul-cloud/integration-tests.git integration-tests
-  - sh ./schulcloud-client/test/switch_branch.sh "integration-tests" "$BRANCH_NAME"
+  - sh switch_branch.sh "integration-tests" "$BRANCH_NAME"
 install:
   # boot servers for integration tests
   - cd docker-compose
