--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "browser-sync": "^2.26.7",
     "compression": "^1.6.2",
+    "connect-redis": "^4.0.3",
     "cookie-parser": "~1.4.3",
     "csurf": "^1.10.0",
     "csv-parse": "^1.2.0",
@@ -31,7 +32,7 @@
     "device-detector-js": "^1.1.1",
     "diff-dom": "^2.4.0",
     "express": "^4.17.1",
-    "express-session": "^1.15.2",
+    "express-session": "^1.16.2",
     "fast-csv": "^2.4.1",
     "feedr": "^2.13.5",
     "font-awesome": "^4.7.0",
@@ -62,6 +63,7 @@
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-sortable-hoc": "^0.8.3",
+    "redis": "^2.8.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "serve-favicon": "^2.5.0",
