--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "mocha": "mocha test/mocha/ --recursive --opts ./test/mocha/mocha.opts",
     "coverage": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- -- test/**/*.test.js --opts ./test/mocha/mocha.opts"
   },
+  "engines": {
+    "node": "^10.16.0"
+  },
   "sasslintConfig": "./.sass-lint.yml",
   "dependencies": {
     "@sentry/browser": "^5.6.1",
