--- a/.travis.yml
+++ b/.travis.yml
@@ -17,50 +17,31 @@ env:
     - FEATURE_TEAMS_ENABLED=true
     - IT_CLIENT_HOST=client
     - BRANCH_NAME=${TRAVIS_PULL_REQUEST_BRANCH:=$TRAVIS_BRANCH}
-before_install:
-  - openssl aes-256-cbc -K $encrypted_839866e404c6_key -iv $encrypted_839866e404c6_iv -in travis_rsa.enc -out travis_rsa -d
-  - echo $BRANCH_NAME
-  # move client into subdirectory
-  - mkdir -p schulcloud-client
-  - mv !(schulcloud-client) schulcloud-client
-  # fetch switch_branch script
-  - curl https://gist.githubusercontent.com/schul-cloud-bot/26e57e99fdae76f30927089c9dd99df7/raw/a590139da5f969a6d330f38ab2d85d3769c86f3f/switch_branch.sh > switch_branch.sh
-  - chmod 700 switch_branch.sh
-  # clone other required repositories and try to switch to branch with same name as current one
-  - git clone https://github.com/schul-cloud/schulcloud-server.git schulcloud-server
-  - sh switch_branch.sh "schulcloud-server" "$BRANCH_NAME"
-  - git clone https://github.com/schul-cloud/docker-compose.git docker-compose
-  - sh switch_branch.sh "docker-compose" "$BRANCH_NAME"
-  - git clone https://github.com/schul-cloud/integration-tests.git integration-tests
-  - sh switch_branch.sh "integration-tests" "$BRANCH_NAME"
-install:
-  # boot servers for integration tests
-  - cd docker-compose
-  - docker-compose -f docker-compose.integration-test-Build.yml build
-  - docker-compose -f docker-compose.integration-test-Build.yml up -d
-  - cd ..
-  # client packages are needed for mocha
-  - cd schulcloud-client && npm ci && cd ..
-  - cd integration-tests && npm ci && cd ..
-before_script:
-  - echo $TRAVIS_BRANCH
-  - echo $TRAVIS_TAG
-  # seed database
-  - cd schulcloud-server && npm run setup && npm run seed && cd ..
-script:
-  # all cd .. in seperate lines to go dir up on test fails
-  - cd schulcloud-client && npm run mocha
-  - cd ..
-  - cd integration-tests && npm run test
-  - cd ..
-after_script:
-  - npm i -g @adrianjost/report-viewer
-  - rv-upload -F **/reports/**/*.html
+
+jobs:
+  include:
+    - stage: test
+      name: Mocha
+      script: npm run mocha
+    - script:
+        - curl https://gist.githubusercontent.com/schul-cloud-bot/a849c38804174f99ca7818782bf03c00/raw/index.sh > integration-test.sh
+        - chmod 700 integration-test.sh
+        - sh integration-test.sh
+      name: "Integration"
+      git:
+        clone: false
+      install:
+        - echo "skipping install"
+    - stage: deploy
+      name: deploy
+      before_install:
+        - openssl aes-256-cbc -K $encrypted_839866e404c6_key -iv $encrypted_839866e404c6_iv -in travis_rsa.enc -out travis_rsa -d
+      before_script:
+        - echo $TRAVIS_BRANCH
+        - echo $TRAVIS_TAG
+      script:
+        - bash ./schulcloud-client/deploy.sh
+
 cache:
   directories:
     - "$HOME/.npm" # cache all packages installed with "npm ci"
-deploy:
-  provider: script
-  script: bash ./deploy.sh
-  on:
-    all_branches: true
