--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,6 @@ env:
     - BACKEND_URL=http://localhost:3030
     - PUBLIC_BACKEND_URL=http://localhost:3030
     - FEATURE_TEAMS_ENABLED=true
-    - IT_CLIENT_HOST=client
     - BRANCH_NAME=${TRAVIS_PULL_REQUEST_BRANCH:=$TRAVIS_BRANCH}
 
 jobs:
@@ -28,6 +27,9 @@ jobs:
         - chmod 700 integration-test.sh
         - sh integration-test.sh
       name: "Integration"
+      env:
+        - IT_CLIENT_HOST=nuxtclient
+        - IT_CLIENT_PORT=3200
       git:
         clone: false
       install:
