--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ jobs:
       install:
         # boot server
         - cd docker-compose
+        - docker-compose -f docker-compose.integration-test-Build.yml build server
         - docker-compose -f docker-compose.integration-test-Build.yml up -d server
         - cd ..
         # client packages are needed for mocha
@@ -43,7 +44,7 @@ jobs:
       before_script:
         # seed database
         - cd schulcloud-server && npm run setup && npm run seed && cd ..
-      script: npm run mocha
+      script: cd schulcloud-client && npm run mocha && cd ..
     - script:
         - curl https://gist.githubusercontent.com/schul-cloud-bot/a849c38804174f99ca7818782bf03c00/raw/index.sh > integration-test.sh
         - chmod 700 integration-test.sh
