fix deploy script

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,13 @@ env:
     - PUBLIC_BACKEND_URL=http://localhost:3030
     - FEATURE_TEAMS_ENABLED=true
     - BRANCH_NAME=${TRAVIS_PULL_REQUEST_BRANCH:=$TRAVIS_BRANCH}
-
+stages:
+  - test
+  - deploy
 jobs:
   include:
-    - stage: Test
-      name: Mocha
+    - stage: test
+      name: mocha
       before_install:
         # move client into subdirectory
         - mkdir -p schulcloud-client
@@ -49,7 +51,7 @@ jobs:
         - curl https://gist.githubusercontent.com/schul-cloud-bot/a849c38804174f99ca7818782bf03c00/raw/index.sh > integration-test.sh
         - chmod 700 integration-test.sh
         - sh integration-test.sh
-      name: Integration
+      name: integration
       env:
         - IT_CLIENT_HOST=nuxtclient
         - IT_CLIENT_PORT=3200
@@ -57,7 +59,7 @@ jobs:
         clone: false
       install:
         - echo "skipping install"
-    - stage: Deploy
+    - stage: deploy
       name: All Instances
       before_install:
         - openssl aes-256-cbc -K $encrypted_839866e404c6_key -iv $encrypted_839866e404c6_iv -in travis_rsa.enc -out travis_rsa -d
@@ -65,7 +67,7 @@ jobs:
         - echo $TRAVIS_BRANCH
         - echo $TRAVIS_TAG
       script:
-        - bash ./schulcloud-client/deploy.sh
+        - bash ./deploy.sh
 
 cache:
   directories:
