camelCase stages and names

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,12 @@ env:
     - FEATURE_TEAMS_ENABLED=true
     - BRANCH_NAME=${TRAVIS_PULL_REQUEST_BRANCH:=$TRAVIS_BRANCH}
 stages:
-  - test
-  - deploy
+  - Test
+  - Deploy
 jobs:
   include:
-    - stage: test
-      name: mocha
+    - stage: Test
+      name: Mocha
       before_install:
         # move client into subdirectory
         - mkdir -p schulcloud-client
@@ -51,7 +51,7 @@ jobs:
         - curl https://gist.githubusercontent.com/schul-cloud-bot/a849c38804174f99ca7818782bf03c00/raw/index.sh > integration-test.sh
         - chmod 700 integration-test.sh
         - sh integration-test.sh
-      name: integration
+      name: Integration
       env:
         - IT_CLIENT_HOST=nuxtclient
         - IT_CLIENT_PORT=3200
@@ -59,7 +59,7 @@ jobs:
         clone: false
       install:
         - echo "skipping install"
-    - stage: deploy
+    - stage: Deploy
       name: All Instances
       before_install:
         - openssl aes-256-cbc -K $encrypted_839866e404c6_key -iv $encrypted_839866e404c6_iv -in travis_rsa.enc -out travis_rsa -d
