--- a/Dockerfile.thr
+++ b/Dockerfile.thr
@@ -8,6 +8,7 @@ EXPOSE 3100
 WORKDIR /home/node/app
 
 COPY ./package.json .
+COPY ./package-lock.json .
 RUN npm install -g nodemon gulp-cli && npm install
 
 COPY . .
