--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "sasslintConfig": "./.sass-lint.yml",
   "dependencies": {
+    "@babel/runtime": "^7.6.3",
     "@sentry/browser": "^5.6.1",
     "@sentry/integrations": "^5.6.1",
     "@sentry/node": "^5.7.1",
@@ -80,6 +81,7 @@
   "devDependencies": {
     "@babel/core": "^7.6.2",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "autoprefixer": "^9.0.1",
     "babel-loader": "^8.0.6",
