--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,7 @@ jobs:
         - echo "skipping install"
     - stage: Deploy
       name: All Instances
+      language: generic
       before_install:
         - openssl aes-256-cbc -K $encrypted_839866e404c6_key -iv $encrypted_839866e404c6_iv -in travis_rsa.enc -out travis_rsa -d
       before_script:
