use npm ci like in the other themes

--- a/Dockerfile.thr
+++ b/Dockerfile.thr
@@ -9,7 +9,7 @@ WORKDIR /home/node/app
 
 COPY ./package.json .
 COPY ./package-lock.json .
-RUN npm install -g nodemon gulp-cli && npm install
+RUN npm install -g nodemon gulp-cli && npm ci
 
 COPY . .
 #COPY ./localtime /etc/localtime
