--- a/package.json
+++ b/package.json
@@ -83,14 +83,13 @@
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
+    "@schul-cloud/eslint-config": "^0.1.4",
     "autoprefixer": "^9.0.1",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "env2": "^2.2.0",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.1",
     "expose-loader": "^0.7.5",
     "gulp": "^3.9.1",
     "gulp-babel": "^8.0.0",
