added attachments to helpdesk form

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"debug": "~2.6.0",
 		"device-detector-js": "^1.1.1",
 		"express": "^4.17.1",
+		"express-fileupload": "^1.1.6",
 		"express-session": "^1.16.2",
 		"fast-csv": "^2.4.1",
 		"feedr": "^2.13.5",
