--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"sasslintConfig": "./.sass-lint.yml",
 	"dependencies": {
 		"@babel/runtime": "^7.6.3",
+		"@schul-cloud/commons": "^1.0.7",
 		"@sentry/browser": "^5.6.1",
 		"@sentry/integrations": "^5.6.1",
 		"@sentry/node": "^5.7.1",
@@ -97,7 +98,7 @@
 		"gulp-clean-css": "^3.0.3",
 		"gulp-concat": "^2.6.1",
 		"gulp-count": "^0.3.0",
-        "gulp-error-handle": "^1.0.1",
+		"gulp-error-handle": "^1.0.1",
 		"gulp-filelog": "^0.4.1",
 		"gulp-header": "^2.0.1",
 		"gulp-if": "^2.0.2",
